GPencil: Sculpting with Subdivide modifier doesn't work correctly #75811

Closed
opened 2020-04-17 05:24:00 +02:00 by n1729 · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-16 15:38, hash: 8cb10c124e

Short description of error
The behavior of sculpting with Subdivide modifier looks broken.

Exact steps for others to reproduce the error

  1. Draw something
  2. Add Subdivide modifier
  3. Go to Sculpt mode and try sculpting
    Blender 2020-04-17 12-12-55.mp4
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-16 15:38, hash: `8cb10c124e` **Short description of error** The behavior of sculpting with Subdivide modifier looks broken. **Exact steps for others to reproduce the error** 1) Draw something 2) Add Subdivide modifier 3) Go to Sculpt mode and try sculpting [Blender 2020-04-17 12-12-55.mp4](https://archive.blender.org/developer/F8477961/Blender_2020-04-17_12-12-55.mp4)
Author

Added subscriber: @n1729

Added subscriber: @n1729
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Can you try the build of 7fbd9b67af ? If that works and it's broken in the build of bf49bb354f it would be the same as #75748 (Entering Sculpt mode after using Multires Subdivide crashes Blender)

Can you try the build of 7fbd9b67af ? If that works and it's broken in the build of bf49bb354f it would be the same as #75748 (Entering Sculpt mode after using Multires Subdivide crashes Blender)
Author

I tested both 7fbd9b67af and bf49bb354f, and they have the same issue.
The results of sculpting with subdivide modifier were like the video capture attached above.

I tested both 7fbd9b67af and bf49bb354f, and they have the same issue. The results of sculpting with subdivide modifier were like the video capture attached above.
Antonio Vazquez self-assigned this 2020-04-17 13:07:06 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I cannot reproduce the exact problem, but I can create a crash using Grab brush, so I keep open the bug because all looks related.

I cannot reproduce the exact problem, but I can create a crash using Grab brush, so I keep open the bug because all looks related.

This issue was referenced by 75ded99ff9

This issue was referenced by 75ded99ff959d5f0ef819bb726bcdbc0a5a2217e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75811
No description provided.