Fix T75811: GPencil Sculpt not working when use Subdivide

When use the subdivide modifier the number of points was not correct and can produce segment faults.

Also, the points were selected by default and this was wrong.